<resources>
    <string name="app_name">example</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_me">AboutMe</string>
    <string name="icon">icon</string>
    <string name="text_example"><![CDATA[android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the android:layout_margin specifies a margin for all four sides of the view. android:layout_marginTop specifies extra space on the top side of this view android:layout_marginBottom specifies space outside the bottom side of this view. android:layout_marginStart specifies space outside the > </TextView> <Button android:id=]]></string>
    <string name="name">name</string>
    <string name="box_two">Box Two</string>
    <string name="box_one">Box One</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">HowToPlay :</string>
    <string name="tap_the_boxes_and_button">Tap the boxes and button</string>
    <string name="green_button">Green Button</string>
    <string name="yellow_button">Yellow Button</string>
    <string name="red_button">Red Button</string>
</resources>