<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="viewModel"
            type="com.soogil.example.aac.SecondFragmentViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

        <TextView
            android:id="@+id/textViewBoxOne"
            style="@style/whiteBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/box_one"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@{viewModel.TEXT_ONE_BACKGROUND_COLOR}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBoxTwo"
            style="@style/whiteBox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/box_two"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBoxOne" />

        <TextView
            android:id="@+id/textViewBoxThree"
            style="@style/whiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/box_three"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewBoxFour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewBoxTwo"
            app:layout_constraintTop_toTopOf="@+id/textViewBoxTwo" />

        <TextView
            android:id="@+id/textViewBoxFour"
            style="@style/whiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/box_four"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewBoxFive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewBoxTwo"
            app:layout_constraintTop_toBottomOf="@+id/textViewBoxThree" />

        <TextView
            android:id="@+id/textViewBoxFive"
            style="@style/whiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/box_five"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewBoxTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/textViewBoxTwo"
            app:layout_constraintTop_toBottomOf="@+id/textViewBoxFour" />

        <TextView
            android:id="@+id/howToPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/tabText"/>

        <TextView
            android:id="@+id/tabText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tap_the_boxes_and_button"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textViewBoxTwo"
            app:layout_constraintStart_toEndOf="@id/howToPlay" />

        <Button
            android:id="@+id/red_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/red_button"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@id/yellow_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yellow_button"
            android:layout_marginStart="20dp"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toStartOf="@id/green_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/red_button" />

        <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/green_button"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@id/yellow_button"
            app:layout_constraintStart_toEndOf="@id/yellow_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>


        <!--    <Button-->
        <!--        android:id="@+id/button_second"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/previous"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/textview_second" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>